--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^4.1.3",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^6.3.4",
     "jquery": "^3.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
