--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.7",
+    "react-stripe-checkout": "^2.6.3",
     "styled-components": "^5.3.5",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
